<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384">

        <TextView
            android:id="@+id/food1"
            style="@style/foodStyle"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/chicken" />

        <TextView
            android:id="@+id/cal1"
            style="@style/calStyle"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/chickenCal" />

        <EditText
            android:id="@+id/input1"
            style="@style/inputStyle"
            android:layout_row="0"
            android:layout_column="2" />

        <TextView
            android:id="@+id/food2"
            style="@style/foodStyle"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/pasta" />

        <TextView
            android:id="@+id/cal2"
            style="@style/calStyle"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/pastaCal" />

        <EditText
            android:id="@+id/input2"
            style="@style/inputStyle"
            android:layout_row="1"
            android:layout_column="2" />

        <TextView
            android:id="@+id/food3"
            style="@style/foodStyle"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/cheese" />

        <TextView
            android:id="@+id/cal3"
            style="@style/calStyle"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/cheeseCal" />

        <EditText
            android:id="@+id/input3"
            style="@style/inputStyle"
            android:layout_row="2"
            android:layout_column="2" />

        <TextView
            android:id="@+id/food4"
            style="@style/foodStyle"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/milk" />

        <TextView
            android:id="@+id/cal4"
            style="@style/calStyle"
            android:layout_row="3"
            android:layout_column="1"
            android:text="@string/milkCal" />

        <EditText
            android:id="@+id/input4"
            style="@style/inputStyle"
            android:layout_row="3"
            android:layout_column="2" />

        <TextView
            android:id="@+id/food5"
            style="@style/foodStyle"
            android:layout_row="4"
            android:layout_column="0"
            android:text="@string/steak" />

        <TextView
            android:id="@+id/cal5"
            style="@style/calStyle"
            android:layout_row="4"
            android:layout_column="1"
            android:text="@string/steakCal" />

        <EditText
            android:id="@+id/input5"
            style="@style/inputStyle"
            android:layout_row="4"
            android:layout_column="2" />
    </GridLayout>

    <TextView
        android:id="@+id/total"
        style="@style/displayStyle"
        android:text="@string/calorieCount"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>